[package]
name = "client-swarm"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.4", features = ["full"] }
rdkafka = { version = "0.28.0", features = ["cmake-build"]}
async-std = { version = "1.9.0", features = ["attributes"] }
futures = { version = "0.3", default-features = false }
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
rand = "0.8.4"
serde = "1.0.127"
serde_json = "1.0.66"
