[package]
name = "client-swarm"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.5", features = ["full"] }
rdkafka = { version = "0.36.2", features = ["cmake-build", "zstd-pkg-config", "ssl", "sasl"]}
async-std = { version = "1.9.0", features = ["attributes"] }
futures = { version = "0.3", default-features = false }
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
rand = "0.8.4"
serde = "1.0.127"
serde_json = "1.0.66"
lazy_static = "1.4.0"
governor = "0.6.3"
histogram = "0.9.1"
tokio-util = "0.7.10"
ringbuffer = "0.15.0"
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
form_urlencoded = "1.2.1"
bytes = "1.5.0"
http-body-util = "0.1.0"
